apps/obsidian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
spec:
  selector:
    app.kubernetes.io/name: obsidian
  ports:
    - port: 5984
      targetPort: http
      protocol: TCP
      name: http
